<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_medium_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    tools:context=".fragments.ProfileInfoDialogFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEnterNameInDialog"
        style="@style/Widget.Design.TextInputLayout"
        app:hintTextAppearance="@style/HintTextAppearance"
        android:drawableTint="@color/colorSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtYourNameInDialog"
            android:drawableTint="@color/colorSecondaryText"
            android:hint="@string/name"
            android:text="Chaw Suu Hlaing"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/yokie_demo_light"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/colorSecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEnterYourPhNumInDialog"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_below="@id/textInputLayoutEnterNameInDialog"
        app:hintTextAppearance="@style/HintTextAppearance"
        android:drawableTint="@color/colorSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhNoInDialog"
            android:drawableTint="@color/colorSecondaryText"
            android:hint="@string/phone_number"
            android:text="09423231"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/yokie_demo_light"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/colorSecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDateOfBirth"
        android:text="Date of Birth"
        android:letterSpacing="-0.03"
        android:layout_marginTop="32dp"
        style="@style/HintTextAppearance"
        android:layout_below="@id/textInputLayoutEnterYourPhNumInDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/rlDaysInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_medium_2"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingTop="@dimen/margin_medium_2"
        android:paddingBottom="@dimen/margin_medium_2"
        android:background="@drawable/bg_shadow_spinner_day"
        android:layout_below="@id/tvDateOfBirth"

        >

        <TextView
            android:id="@+id/tvSelectedDaysInProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/yokie_demo_light"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/days" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_medium_3"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_toEndOf="@id/tvSelectedDaysInProfile"
            android:background="@color/white"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:tint="@color/colorSecondaryText" />

        <Spinner
            android:id="@+id/spinnerDaysInProfile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/mySpinnerItemStyle"
            android:background="@color/white"
            android:overlapAnchor="false" >
        </Spinner>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMonthInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_medium_2"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingTop="@dimen/margin_medium_2"
        android:paddingBottom="@dimen/margin_medium_2"
        android:background="@drawable/bg_shadow_spinner_day"
        android:layout_toEndOf="@id/rlDaysInProfile"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_below="@id/tvDateOfBirth"

        >

        <TextView
            android:id="@+id/tvSelectedMonthInProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/yokie_demo_light"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/month" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_medium_3"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_toEndOf="@id/tvSelectedMonthInProfile"
            android:background="@color/white"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:tint="@color/colorSecondaryText" />

        <Spinner
            android:id="@+id/spinnerMonthInProfile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/mySpinnerItemStyle"
            android:background="@color/white"
            android:overlapAnchor="false" >
        </Spinner>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlYearInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_medium"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingTop="@dimen/margin_medium_2"
        android:paddingBottom="@dimen/margin_medium_2"
        android:background="@drawable/bg_shadow_spinner_day"
        android:layout_toEndOf="@id/rlMonthInProfile"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_below="@id/tvDateOfBirth"

        >

        <TextView
            android:id="@+id/tvSelectedYearInProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/yokie_demo_light"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/colorSecondaryText"
            android:text="Year" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_toEndOf="@id/tvSelectedYearInProfile"
            android:background="@color/white"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:tint="@color/colorSecondaryText" />

        <Spinner
            android:id="@+id/spinnerYearInProfile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/mySpinnerItemStyle"
            android:background="@color/white"
            android:overlapAnchor="false" >
        </Spinner>
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGender"
        android:text="@string/gender"
        android:letterSpacing="-0.03"
        android:layout_marginTop="32dp"
        style="@style/HintTextAppearance"
        android:layout_below="@id/rlDaysInProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgGenderInProfile"
        android:layout_below="@id/tvGender"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbMaleInProfile"
            android:text="Male"
            android:checked="true"
            android:textStyle="bold"
            android:drawablePadding="0dp"
            android:textColor="@color/colorSecondaryText"
            android:fontFamily="@font/yokie_demo_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbFemaleInProfile"
            android:text="@string/female"
            android:checked="true"
            android:layout_marginStart="20dp"
            android:drawablePadding="0dp"
            android:textColor="@color/colorSecondaryText"
            android:fontFamily="@font/yokie_demo_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbOtherInProfile"
            android:text="Other"
            android:checked="true"
            android:layout_marginStart="20dp"
            android:drawablePadding="0dp"
            android:textColor="@color/colorSecondaryText"
            android:fontFamily="@font/yokie_demo_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <LinearLayout
       android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_below="@id/rgGenderInProfile"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/rgGender"
            android:fontFamily="@font/yokiedemo_extrabold"
            android:textSize="@dimen/text_regular_2x"
            android:paddingTop="@dimen/dimen_12"
            android:paddingBottom="@dimen/dimen_12"
            android:paddingStart="@dimen/margin_xlarge"
            android:paddingEnd="@dimen/margin_xlarge"
            android:background="@drawable/bg_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:elevation="@dimen/margin_xlarge"
            android:fontFamily="@font/yokiedemo_extrabold"
            android:layout_marginEnd="@dimen/margin_small"
            android:textSize="@dimen/text_regular_2x"
            android:paddingTop="@dimen/dimen_12"
            android:paddingBottom="@dimen/dimen_12"
            android:paddingStart="@dimen/margin_xlarge"
            android:paddingEnd="@dimen/margin_xlarge"
            android:background="@drawable/bg_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</RelativeLayout>