<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/ivBackFromLogin"
          android:layout_marginStart="@dimen/margin_medium_2"
          android:scaleType="centerCrop"
          app:srcCompat="@drawable/ic_baseline_arrow_back_24"
          android:layout_width="30dp"
          android:layout_height="30dp"/>
    <RelativeLayout
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:fontFamily="@font/yokiedemo_extrabold"
            android:text="@string/lbl_welcome"
            android:letterSpacing="-0.03"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginToContinue"
            android:layout_below="@id/tvWelcome"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/notosan_regular"
            android:text="@string/login_to_continue"
            android:letterSpacing="-0.03"
            android:textColor="@color/colorLoginToContinue"
            android:textSize="@dimen/text_regular_2x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogin"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:layout_below="@id/tvLoginToContinue"
            android:layout_marginBottom="@dimen/dimen_50dp"
            app:srcCompat="@drawable/ic_welcome_page_logo"
            android:layout_width="270dp"
            android:layout_height="200dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEnterYourMail"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_below="@id/ivLogin"
            app:hintTextAppearance="@style/HintTextAppearance"
            android:drawableTint="@color/colorSecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:drawableTint="@color/colorSecondaryText"
            android:hint="Enter Your Email"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/yokie_demo_light"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/colorSecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEnterPassword"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_below="@id/textInputLayoutEnterYourMail"
            app:hintTextAppearance="@style/HintTextAppearance"
            android:drawableTint="@color/colorSecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEnterYourPassword"
                android:drawableTint="@color/colorSecondaryText"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/colorPrimaryDark"
                android:fontFamily="@font/yokie_demo_light"
                android:textSize="@dimen/text_regular_2x"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_below="@id/textInputLayoutEnterPassword"
            android:text="Forgot Password?"
            android:textColor="@color/colorSecondaryText"
            android:fontFamily="@font/notosan_medium"
            android:textSize="@dimen/text_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/yokiedemo_extrabold"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/text_regular_2x"
            android:paddingTop="@dimen/dimen_15dp"
            android:paddingBottom="@dimen/dimen_15dp"
            android:paddingStart="@dimen/dimen_50dp"
            android:layout_below="@id/tvForgotPassword"
            android:paddingEnd="@dimen/dimen_50dp"
            android:background="@drawable/bg_login_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>