<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OtpVerifyActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBackFromVerify"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <RelativeLayout
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHi"
                android:fontFamily="@font/yokiedemo_extrabold"
                android:text="@string/hi"
                android:letterSpacing="-0.03"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginToContinue"
                android:layout_below="@id/tvHi"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/notosan_regular"
                android:text="@string/create_a_new_account"
                android:letterSpacing="-0.03"
                android:textColor="@color/colorLoginToContinue"
                android:textSize="@dimen/text_regular_2x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivVerifyLogo"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                android:layout_marginTop="@dimen/dimen_50dp"
                android:layout_below="@id/tvLoginToContinue"
                android:layout_marginBottom="@dimen/dimen_50dp"
                app:srcCompat="@drawable/verifty_logo"
                android:layout_width="270dp"
                android:layout_height="200dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEnterYourPhNumVerify"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_below="@id/ivVerifyLogo"
                android:layout_toStartOf="@id/btnGetOTp"
                android:layout_marginEnd="10dp"
                app:hintTextAppearance="@style/HintTextAppearance"
                android:drawableTint="@color/colorSecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhNoVerify"
                    android:drawableTint="@color/colorSecondaryText"
                    android:hint="@string/enter_your_phone_number"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:fontFamily="@font/yokie_demo_light"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGetOTp"
                android:text="@string/get_otp"
                android:layout_below="@id/ivVerifyLogo"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:elevation="@dimen/margin_xlarge"
                android:fontFamily="@font/yokiedemo_extrabold"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_small"
                android:paddingTop="12dp"
                android:paddingBottom="6dp"
                android:paddingStart="10dp"
               android:layout_alignParentEnd="true"
                android:paddingEnd="10dp"
                android:background="@drawable/bg_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--    otp input layout-->
            <com.chaos.view.PinView
                android:id="@+id/pinViewOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:layout_below="@id/textInputLayoutEnterYourPhNumVerify"
                android:layout_centerHorizontal="true"
                android:cursorVisible="true"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@drawable/bg_shadow"
                android:fontFamily="@font/inter_semibold"
               android:text="1234"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_pinview"
                app:cursorColor="@color/colorAccent"
                app:cursorWidth="2dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:itemCount="4"
                app:itemHeight="60dp"
                app:itemRadius="@dimen/dimen_5dp"
                app:itemSpacing="10dp"
                app:itemWidth="60dp"
                app:lineColor="@color/white"
                app:lineWidth="1dp"
                app:viewType="rectangle"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <LinearLayout
                android:id="@+id/llResendOtpCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pinViewOtp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDontReceiveOtpCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosan_regular"
                    android:text="@string/dont_receive_the_otp"
                    android:textSize="@dimen/text_regular"
                    android:textColor="#999999" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvResendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Resend Code"
                    android:fontFamily="@font/notosan_bold"
                    android:textSize="@dimen/text_regular"
                    android:textColor="@color/colorSecondaryText" />
            </LinearLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVerify"
                android:text="Verify"
                android:layout_below="@id/llResendOtpCode"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:elevation="@dimen/margin_xlarge"
                android:fontFamily="@font/yokiedemo_extrabold"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:layout_marginEnd="@dimen/margin_small"
               android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_regular_2x"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_15dp"
                android:paddingStart="@dimen/dimen_50dp"
                android:layout_marginBottom="60dp"
                android:paddingEnd="@dimen/dimen_50dp"
                android:background="@drawable/bg_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>